# advent-of-code

./: .clang-format  .gitignore  .throttle.timestamp  CMakeLists.txt  CMakePresets.json  README.md  aoc.cpp  aoc_proxy.hpp  justfile  runner.cpp
2015/: day1.zig  day2.zig  day3.zig  day4.zig  day5.zig  helpers.zig
2015/utils/: io.zig  parsing.zig  types.zig
2025/: .clang-format  CMakeLists.txt  README.md  day1.cpp
2025/helpers/: base.hpp  io.cpp  io.hpp  math.cpp  math.hpp  parse.hpp  std.hpp
2025/solutions/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day1.cpp  day2.cpp
2025/utils/: base.hpp  grid.hpp  io.cpp  io.hpp  math.hpp  parse.hpp  print.hpp  sequence.hpp  vec.hpp
solutions/: export_macro.hpp  prototype_macro.hpp  prototypes.hpp
solutions/2015/: day01.cpp  day02.cpp  day04.cpp
solutions/2024/: day01.cpp  day02.cpp  prototypes.hpp
solutions/2025/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  prototypes.hpp
src/: aoc_proxy.cpp  aoc_proxy.hpp  solution_map.cpp  solution_map.hpp
utils/: base.hpp  grid.hpp  hashing.cpp  hashing.hpp  io.cpp  io.hpp  parse.hpp  print.hpp  priority_queue.hpp  sequence.hpp  sops.cpp  sops.hpp  split.cpp  split.hpp  std.hpp  utils.hpp  vec.hpp
